# rusty-forest

./: Cargo.toml  README.md
data/: medium.csv  small.csv
src/: array_ext.rs  csv_io.rs  forest.rs  main.rs  utils.rs
src/forest/: tree.rs
